--- a/module-03/index.html
+++ b/module-03/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/module-03/css/style.css">
     <title>Document</title>
 </head>
 
@@ -13,16 +14,16 @@
         <nav class="main-nav">
             <ul class="main-menu">
                 <li class="main-menu-item">
-                    <a href="#maim-lifestyle" class="main-menu-link">lifestyle</a>
+                    <a href="#main-lifestyle" class="main-menu-link">LIFESTYLE</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#maim-photodiar" class="main-menu-link">photodiary</a>
+                    <a href="#main-photodiary" class="main-menu-link">PHOTODIARY</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#maim-music" class="main-menu-link">music</a>
+                    <a href="#main-music" class="main-menu-link">MUSIC</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#maim-travel" class="main-menu-link">travel</a>
+                    <a href="#main-travel" class="main-menu-link">TRAVEL</a>
                 </li>
             </ul>
         </nav>
@@ -30,12 +31,10 @@
 
     <main class="main-content">
 
-        <section class="main-lifestyle" id="maim-lifestyle">
-            <img src="img/img-01.jpg" alt="Must be picture">
-            <br>
-            <br>
-            <div class="lifestyle" id="lifestyle">
-                Lifestyle
+        <section class="main-section-lifestyle" id="main-lifestyle">
+            <img src="/img/Rettangolo 4-1.jpg" alt="Must be picture">
+            <div class="lifestyle">
+                LIFESTYLE
                 <h2 class="title">
                     More than just a music festival
                 </h2>
@@ -53,12 +52,10 @@
             </div>
         </section>
 
-        <section class="main-photodiar" id="maim-photodiar">
-            <img src="img/img-02.jpg" alt="Must be picture">
-            <br>
-            <br>
-            <div class="photodiary" id="photodiary">
-                lifestyle
+        <section class="main-section-photodiar" id="main-photodiary">
+            <img src="img/Rettangolo 4-2.jpg" alt="Must be picture">
+            <div class="photodiary">
+                LIFESTYLE
                 <h2 class="title">
                     Life tastes better with coffee
                 </h2>
@@ -76,12 +73,10 @@
             </div>
         </section>
 
-        <section class="main-music" id="maim-music">
-            <img src="img/img-03.jpg" alt="Must be picture">
-            <br>
-            <br>
-            <div class="music" id="music">
-                photodiary
+        <section class="main-section-music" id="main-music">
+            <img src="img/Rettangolo 4-3.jpg" alt="Must be picture">
+            <div class="music">
+                PHOTODIARY
                 <h2 class="title">
                     American dream
                 </h2>
@@ -99,12 +94,10 @@
             </div>
         </section>
 
-        <section class="main-travel" id="maim-travel">
-            <img src="img/img-04.jpg" alt="Must be picture">
-            <br>
-            <br>
-            <div class="travel" id="travel">
-                photodiary
+        <section class="main-section-travel" id="main-travel">
+            <img src="img/Rettangolo 4-4.jpg" alt="Must be picture">
+            <div class="travel">
+                PHOTODIARY
                 <h2 class="title">
                     A day exploring the Alps
                 </h2>
@@ -121,6 +114,49 @@
                     modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
             </div>
         </section>
+
+        <section class="main-section-song" id="main-song">
+            <img src="img/Rettangolo 4-5.jpg" alt="Must be picture">
+            <div class="section-song">
+                LIFESTYLE
+                <h2 class="title">
+                    Top 10 song for running
+                </h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis
+                    unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+                    eaque ipsa quae ab illo inventore veritatis et quasi architecto jjhj beatae vitae dicta sunt
+                    explicabo. Nemo enxzim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+                    qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius
+                    modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+            </div>
+        </section>
+
+        <section class="main-section-winter" id="main-winter">
+            <img src="img/Rettangolo 4-6.jpg" alt="Must be picture">
+            <div class="section-winter">
+                LIFESTYLE
+                <h2 class="title">
+                    Cold winter days
+                </h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus
+                    error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+                    inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
+                    voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
+                    qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
+                    amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et
+                    dolore magnam aliquam quaerat voluptatem.</p>
+            </div>
+        </section>
+
     </main>
 
     <footer>
