Add css with navigation

--- a/module-03/index.html
+++ b/module-03/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/module-03/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <header class="main-header">
+    <header class="main-header wrapper">
         <nav class="main-nav">
             <ul class="main-menu">
                 <li class="main-menu-item">
@@ -29,7 +29,7 @@
         </nav>
     </header>
 
-    <main class="main-content">
+    <main class="main-content wrapper">
 
         <section class="main-section-lifestyle" id="main-lifestyle">
             <img src="/img/Rettangolo4-1.jpg" alt="Must be picture">
@@ -159,7 +159,7 @@
 
     </main>
 
-    <footer>
+    <footer class="main-footer wrapper">
         <button type="submit">Load more</button>
     </footer>
 </body>
