--- a/module-03/index.html
+++ b/module-03/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <link rel="stylesheet" href="normolize.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Ubuntu:300i,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -14,16 +16,16 @@
         <nav class="main-nav">
             <ul class="main-menu">
                 <li class="main-menu-item">
-                    <a href="#main-lifestyle" class="main-menu-link">LIFESTYLE</a>
+                    <a href="#main-lifestyle" class="main-menu-link">Lifestyle</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#main-photodiary" class="main-menu-link">PHOTODIARY</a>
+                    <a href="#main-photodiary" class="main-menu-link">Photodiary</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#main-music" class="main-menu-link">MUSIC</a>
+                    <a href="#main-music" class="main-menu-link">Music</a>
                 </li>
                 <li class="main-menu-item">
-                    <a href="#main-travel" class="main-menu-link">TRAVEL</a>
+                    <a href="#main-travel" class="main-menu-link">Travel</a>
                 </li>
             </ul>
         </nav>
@@ -34,7 +36,7 @@
         <section class="main-section-lifestyle" id="main-lifestyle">
             <img src="/img/Rettangolo4-1.jpg" alt="Must be picture">
             <div class="lifestyle">
-                LIFESTYLE
+                Lifestyle
                 <h2 class="title">
                     More than just a music festival
                 </h2>
@@ -55,7 +57,7 @@
         <section class="main-section-photodiar" id="main-photodiary">
             <img src="img/Rettangolo4-2.jpg" alt="Must be picture">
             <div class="photodiary">
-                LIFESTYLE
+                Lifestyle
                 <h2 class="title">
                     Life tastes better with coffee
                 </h2>
@@ -76,7 +78,7 @@
         <section class="main-section-music" id="main-music">
             <img src="img/Rettangolo4-3.jpg" alt="Must be picture">
             <div class="music">
-                PHOTODIARY
+                Photodiary
                 <h2 class="title">
                     American dream
                 </h2>
@@ -97,7 +99,7 @@
         <section class="main-section-travel" id="main-travel">
             <img src="img/Rettangolo4-4.jpg" alt="Must be picture">
             <div class="travel">
-                PHOTODIARY
+                Photodiary
                 <h2 class="title">
                     A day exploring the Alps
                 </h2>
@@ -118,7 +120,7 @@
         <section class="main-section-song" id="main-song">
             <img src="img/Rettangolo4-5.jpg" alt="Must be picture">
             <div class="section-song">
-                LIFESTYLE
+                Lifestyle
                 <h2 class="title">
                     Top 10 song for running
                 </h2>
@@ -139,7 +141,7 @@
         <section class="main-section-winter" id="main-winter">
             <img src="img/Rettangolo4-6.jpg" alt="Must be picture">
             <div class="section-winter">
-                LIFESTYLE
+                Lifestyle
                 <h2 class="title">
                     Cold winter days
                 </h2>
