Add part of main

--- a/module-03/index.html
+++ b/module-03/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="main-header wrapper">
+    <header class="main-header container">
         <nav class="main-nav">
             <ul class="main-menu">
                 <li class="main-menu-item">
@@ -31,16 +31,16 @@
         </nav>
     </header>
 
-    <main class="main-content wrapper">
+    <main class="main-content container">
 
-        <section class="main-section-lifestyle" id="main-lifestyle">
+        <section class="main-section-content" id="main-lifestyle">
             <img src="/img/Rettangolo4-1.jpg" alt="Must be picture">
-            <div class="lifestyle">
+            <div class="section-content">
                 Lifestyle
-                <h2 class="title">
+                <h2 class="title-section">
                     More than just a music festival
                 </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                     laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                     voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
@@ -54,14 +54,14 @@
             </div>
         </section>
 
-        <section class="main-section-photodiar" id="main-photodiary">
+        <section class="main-section-content" id="main-photodiary">
             <img src="img/Rettangolo4-2.jpg" alt="Must be picture">
-            <div class="photodiary">
+            <div class="section-content">
                 Lifestyle
-                <h2 class="title">
+                <h2 class="title-section">
                     Life tastes better with coffee
                 </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                     laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                     voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
@@ -75,14 +75,14 @@
             </div>
         </section>
 
-        <section class="main-section-music" id="main-music">
+        <section class="main-section-content" id="main-music">
             <img src="img/Rettangolo4-3.jpg" alt="Must be picture">
-            <div class="music">
+            <div class="section-content">
                 Photodiary
-                <h2 class="title">
+                <h2 class="title-section">
                     American dream
                 </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                     laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                     voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
@@ -96,14 +96,14 @@
             </div>
         </section>
 
-        <section class="main-section-travel" id="main-travel">
+        <section class="main-section-content" id="main-travel">
             <img src="img/Rettangolo4-4.jpg" alt="Must be picture">
-            <div class="travel">
+            <div class="section-content">
                 Photodiary
-                <h2 class="title">
+                <h2 class="title-section">
                     A day exploring the Alps
                 </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                     laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                     voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
@@ -117,14 +117,14 @@
             </div>
         </section>
 
-        <section class="main-section-song" id="main-song">
+        <section class="main-section-content" id="main-song">
             <img src="img/Rettangolo4-5.jpg" alt="Must be picture">
-            <div class="section-song">
+            <div class="section-content">
                 Lifestyle
-                <h2 class="title">
+                <h2 class="title-section">
                     Top 10 song for running
                 </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                     laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                     voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
@@ -138,14 +138,14 @@
             </div>
         </section>
 
-        <section class="main-section-winter" id="main-winter">
+        <section class="main-section-content" id="main-winter">
             <img src="img/Rettangolo4-6.jpg" alt="Must be picture">
-            <div class="section-winter">
+            <div class="section-content">
                 Lifestyle
-                <h2 class="title">
+                <h2 class="title-section">
                     Cold winter days
                 </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
@@ -161,7 +161,7 @@
 
     </main>
 
-    <footer class="main-footer wrapper">
+    <footer class="main-footer container">
         <button type="submit">Load more</button>
     </footer>
 </body>
