Task completed before validation

--- a/module-03/index.html
+++ b/module-03/index.html
@@ -15,16 +15,16 @@
     <header class="main-header container">
         <nav class="main-nav">
             <ul class="main-menu">
-                <li class="main-menu-item">
+                <li class="menu-item-lifestyle">
                     <a href="#main-lifestyle" class="main-menu-link">Lifestyle</a>
                 </li>
-                <li class="main-menu-item">
+                <li class="menu-item-photodiary">
                     <a href="#main-photodiary" class="main-menu-link">Photodiary</a>
                 </li>
-                <li class="main-menu-item">
+                <li class="menu-item-music">
                     <a href="#main-music" class="main-menu-link">Music</a>
                 </li>
-                <li class="main-menu-item">
+                <li class="menu-item-travel">
                     <a href="#main-travel" class="main-menu-link">Travel</a>
                 </li>
             </ul>
