--- a/module-03/index.html
+++ b/module-03/index.html
@@ -35,7 +35,7 @@
         <section class="main-section-content">
 
             <div class="main-subsection-content" id="main-lifestyle">
-                <img src="/img/Rettangolo4-1.jpg" alt="Must be picture">
+                <img src="img/Rettangolo4-1.jpg" alt="Must be picture">
                 <div class="section-content">
                     <span class="section-content-title">Lifestyle</span>
                     <h2 class="title-section">More than just a music festival</h2>
