Changed after verification

--- a/module-03/index.html
+++ b/module-03/index.html
@@ -36,8 +36,9 @@
 
             <div class="main-subsection-content" id="main-lifestyle">
                 <img src="img/Rettangolo4-1.jpg" alt="Must be picture">
+
                 <div class="section-content">
-                    <span class="section-content-title">Lifestyle</span>
+                    <p class="section-content-title">Lifestyle</p>
                     <h2 class="title-section">More than just a music festival</h2>
                     <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -47,8 +48,9 @@
 
             <div class="main-subsection-content" id="main-photodiary">
                 <img src="img/Rettangolo4-2.jpg" alt="Must be picture">
+
                 <div class="section-content">
-                    <span class="section-content-title">Lifestyle</span>
+                    <p class="section-content-title">Lifestyle</p>
                     <h2 class="title-section">Life tastes better with coffee</h2>
                     <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -61,8 +63,9 @@
 
             <div class="main-subsection-content" id="main-music">
                 <img src="img/Rettangolo4-3.jpg" alt="Must be picture">
+
                 <div class="section-content">
-                    <span class="section-content-title">Photodiary</span>
+                    <p class="section-content-title">Photodiary</p>
                     <h2 class="title-section">American dream</h2>
                     <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -72,8 +75,9 @@
 
             <div class="main-subsection-content" id="main-travel">
                 <img src="img/Rettangolo4-4.jpg" alt="Must be picture">
+
                 <div class="section-content">
-                    <span class="section-content-title">Photodiary</span>
+                    <p class="section-content-title">Photodiary</p>
                     <h2 class="title-section">A day exploring the Alps</h2>
                     <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -85,8 +89,9 @@
         <section class="main-section-content">
             <div class="main-subsection-content" id="main-song">
                 <img src="img/Rettangolo4-5.jpg" alt="Must be picture">
+
                 <div class="section-content">
-                    <span class="section-content-title">Lifestyle</span>
+                    <p class="section-content-title">Lifestyle</p>
                     <h2 class="title-section">Top 10 song for running</h2>
                     <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -96,8 +101,9 @@
 
             <div class="main-subsection-content" id="main-winter">
                 <img src="img/Rettangolo4-6.jpg" alt="Must be picture">
+
                 <div class="section-content">
-                    <span class="section-content-title">Lifestyle</span>
+                    <p class="section-content-title">Lifestyle</p>
                     <h2 class="title-section">Cold winter days</h2>
                     <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
