Added structure html

--- a/module-04/index.html
+++ b/module-04/index.html
@@ -11,7 +11,53 @@
 </head>
 
 <body>
+    <header class="main-header">
+        <div class="main-logo">
+            <p class="logo-name">Mart</p>
+        </div>
+        <nav class="main-navigation">
+            <ul class="navigation-items">
+                <li class="navigation-item"><a href="#">Home</a></li>
+                <li class="navigation-item"><a href="#">About us</a></li>
+                <li class="navigation-item"><a href="#">Page</a></li>
+                <li class="navigation-item"><a href="#">Shop</a></li>
+                <li class="navigation-item"><a href="#">Blog</a></li>
+                <li class="navigation-item"><a href="#">Contact us</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main class="main-content">
+        <section class="main-section-products">
+            <h2 class="main-title-products">FEATURED PRODUCTS</h2>
+            <ul class="items-products">
+                <li class="item-products">
+                    <div class="product">
+                        <img src="" alt="Must be picture" width="255px" height="282px">
+                        <p class="name-product">Item</p>
+                        <p class="price-product">Price</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section class="main-section-news">
+            <h2 class="main-title-">LATEST NEWS</h2>
+            <ul class="items-news">
+                <li class="item-news">
+                    <div class="new">
+                        <img src="" alt="Must be picture" width="350px" height="262px">
+                        <p>Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
+                        <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet
+                            mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
+                        <div class="download">
+                            <button class="download-button">Read More</button>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 
 </html>
