--- a/module-04/index.html
+++ b/module-04/index.html
@@ -6,23 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>module-04</title>
-    <link rel="stylesheet" href="/module-04/css/normalize.css">
-    <link rel="stylesheet" href="/module-04/css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header class="main-header">
-        <div class="main-logo">
-            <p class="logo-name">Mart</p>
-        </div>
-        <nav class="main-navigation">
+    <header class="main-header container ">
+        <nav class="main-navigation clearfix">
+            <a href="" class="logo-name">Mart</a>
             <ul class="navigation-items">
-                <li class="navigation-item"><a href="#">Home</a></li>
-                <li class="navigation-item"><a href="#">About us</a></li>
-                <li class="navigation-item"><a href="#">Page</a></li>
-                <li class="navigation-item"><a href="#">Shop</a></li>
-                <li class="navigation-item"><a href="#">Blog</a></li>
-                <li class="navigation-item"><a href="#">Contact us</a></li>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About us</a>
+                </li>
+                <li>
+                    <a href="#">Page</a>
+                </li>
+                <li>
+                    <a href="#">Shop</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="#">Contact us</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -33,7 +43,7 @@
             <ul class="items-products">
                 <li class="item-products">
                     <div class="product">
-                        <img src="" alt="Must be picture" width="255px" height="282px">
+                        <img src="/" alt="Must be picture" width="255px" height="282px">
                         <p class="name-product">Item</p>
                         <p class="price-product">Price</p>
                     </div>
@@ -46,7 +56,7 @@
             <ul class="items-news">
                 <li class="item-news">
                     <div class="new">
-                        <img src="" alt="Must be picture" width="350px" height="262px">
+                        <img src="/" alt="Must be picture" width="350px" height="262px">
                         <p>Lorem Ipsu m. Proin gravida nibh vel velit auctor aliquet. Aenean </p>
                         <p>Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet
                             mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt </p>
