Added Products section

--- a/module-04/index.html
+++ b/module-04/index.html
@@ -37,22 +37,71 @@
         </nav>
     </header>
 
-    <main class="main-content">
-        <section class="main-section-products">
-            <h2 class="main-title-products">FEATURED PRODUCTS</h2>
+    <main class="main-content container">
+        <section class="main-section clearfix">
+            <h2 class="main-title">FEATURED PRODUCTS</h2>
             <ul class="items-products">
                 <li class="item-products">
                     <div class="product">
                         <img src="/" alt="Must be picture" width="255px" height="282px">
-                        <p class="name-product">Item</p>
-                        <p class="price-product">Price</p>
+                        <p class="name-product">Blue Tshirt</p>
+                        <p class="price-product">$26</p>
+                    </div>
+                </li>
+                <li class="item-products">
+                    <div class="product">
+                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <p class="name-product">WOMAN shirt</p>
+                        <p class="price-product">$31</p>
+                    </div>
+                </li>
+                <li class="item-products">
+                    <div class="product">
+                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <p class="name-product">YELLOW Tshirt</p>
+                        <p class="price-product">$21</p>
+                    </div>
+                </li>
+                <li class="item-products">
+                    <div class="product">
+                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <p class="name-product">Cool lingerie</p>
+                        <p class="price-product">$56</p>
+                    </div>
+                </li>
+                <li class="item-products">
+                    <div class="product">
+                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <p class="name-product">Blue Tshirt</p>
+                        <p class="price-product">$26</p>
+                    </div>
+                </li>
+                <li class="item-products">
+                    <div class="product">
+                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <p class="name-product">WOMAN shirt</p>
+                        <p class="price-product">$31</p>
+                    </div>
+                </li>
+                <li class="item-products">
+                    <div class="product">
+                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <p class="name-product">YELLOW Tshirt</p>
+                        <p class="price-product">$21</p>
+                    </div>
+                </li>
+                <li class="item-products">
+                    <div class="product">
+                        <img src="/" alt="Must be picture" width="255px" height="282px">
+                        <p class="name-product">Cool lingerie</p>
+                        <p class="price-product">$56</p>
                     </div>
                 </li>
             </ul>
         </section>
 
-        <section class="main-section-news">
-            <h2 class="main-title-">LATEST NEWS</h2>
+        <section class="main-section clearfix">
+            <h2 class="main-title-news">LATEST NEWS</h2>
             <ul class="items-news">
                 <li class="item-news">
                     <div class="new">
